# ar-part2-set

./: .gitignore  pyproject.toml
network/: commands.ismv  defnetw.txt  model.dot  model.smv  model_4.smv  model_a.smv  model_b.smv  model_c.smv  model_d.smv  model_e.smv  model_f.smv  model_g.smv  model_h.smv  network.py  states.txt
network/templates/: network.smv
report/: ref.bib  report-part2-lukovandermaas.aux  report-part2-lukovandermaas.bbl  report-part2-lukovandermaas.bcf  report-part2-lukovandermaas.blg  report-part2-lukovandermaas.fdb_latexmk  report-part2-lukovandermaas.fls  report-part2-lukovandermaas.run.xml  report-part2-lukovandermaas.tex  set_board.xcf
rewriting/: a.in  a.mace4.out  ba.in  ba.prover9.out  bb.in  bb.mace4.out  bb.prover9.out  bc.in  bc.mace4.out  bc.prover9.out
set/: SET.py  res_10_1_nd.txt  res_10_2_nd.txt  res_11_1_nd.txt  res_12_1_nd.txt  res_13_1_nd.txt  res_14_1_nd.txt  res_15_1_nd.txt  res_16_1_nd.txt  res_17_1_nd.txt  res_18_1_nd.txt  res_19_1_nd.txt  res_20_1_nd.txt  res_3_1_nd.txt  res_3_3_d.txt  res_4_1_nd.txt  res_4_2_nd.txt  res_4_3_d.txt  res_5_1_nd.txt  res_5_2_nd.txt  res_5_3_d.txt  res_6_1_nd.txt  res_6_2_nd.txt  res_6_3_d.txt  res_7_1_nd.txt  res_7_2_nd.txt  res_7_3_d.txt  res_8_1_nd.txt  res_8_2_nd.txt  res_9_1_nd.txt  res_9_2_nd.txt
villages/nusmv/: a.mace4.out  model.smv  model_a.smv  model_b.smv  model_c.smv  test.smv  villages.py
villages/nusmv/templates/: villages.smv
villages/z3/: villages.py
